# scout-suite-findings-processor

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
scan_compute/: consumer.py  dependencies.py  main.py  populate_cache.py
scan_compute/constants/: cache_keys.py  compliances.py  scan.py  tables.py
scan_compute/routers/: scan.py
scan_compute/services/: scan_data_processor.py  scan_processor.py
scan_compute/services/integrations/: resource_scorer.py  security_scorer.py
scan_compute/services/integrations/modules/: module_processor.py  pfunnel_processor.py
scan_compute/services/parsers/: scan_report_parser.py
scan_compute/types/: constant.py  scan.py
scan_compute/utils/: cache.py  config.py  constant.py  database.py  enum.py  logging.py  util.py
tests/: test_display_path_parsing.py  test_resource_scorer.py
