[project]
name = "scan-compute"
version = "0.1.0"
description = "scout-suite report parser"
authors = [
    {name = "Shammi Anand", email = "shammianand101@gmail.com"},
]
dependencies = [
    "fastapi>=0.111.1",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.3.4",
    "asyncpg>=0.29.0",
    "ujson>=5.10.0",
    "pandas>=2.2.2",
    "boto3>=1.34.147",
    "pymongo>=4.8.0",
    "google-auth>=2.32.0",
    "google-api-python-client>=2.137.0",
    "google-cloud-logging>=3.10.0",
    "redis>=5.0.7",
    "pytest>=8.3.2",
    "structlog>=24.4.0",
    "google-cloud-workflows>=1.14.5",
    "uvicorn>=0.30.6",
    "oauth2client>=4.1.3",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
types = [
    "celery-types>=0.22.0",
    "asyncpg-stubs>=0.29.1",
    "types-ujson>=5.10.0.20240515",
    "mypy-boto3>=1.35.19",
    "boto3-stubs[essential,sts]>=1.35.19",
    "types-requests>=2.32.0.20240914",
]
